--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { version = "1.43.0", features = ["sync"] }
+tokio = { version = "1", features = ["sync"] }
+pin-project-lite = "0.2"
 
 [dev-dependencies]
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
