--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["sync"] }
 pin-project-lite = "0.2"
+parking_lot = "0.12"
+pin-list = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
