--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "flag-bearer"
-version = "0.1.0"
+version = "0.1.0-rc.1"
 edition = "2024"
+license = "Apache-2.0 OR MIT"
+description = "Generic async semaphores"
+repository = "https://github.com/conradludgate/flag-bearer"
 
 [dependencies]
 pin-project-lite = "0.2"
