--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ pin-list = { version = "0.1", default-features = false }
 tokio = { version = "1", features = ["full"] }
 futures-testing = { git = "https://github.com/conradludgate/futures-testing" }
 futures-util = "0.3"
+
+hdrhistogram = "7.5.4"
+
+[[bench]]
+harness = false
+name = "acquire"
