re-introduce pin-project-lite with emotional support from robjtede

--- a/flag-bearer/Cargo.toml
+++ b/flag-bearer/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/conradludgate/flag-bearer"
 [dependencies]
 parking_lot = { version = "0.12", default-features = false }
 pin-list = { version = "0.1", default-features = false }
+pin-project-lite = "0.2"
 
 [dev-dependencies]
 pollster = "0.4"
