--- a/flag-bearer/Cargo.toml
+++ b/flag-bearer/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/conradludgate/flag-bearer"
 [dependencies]
 pin-list = { version = "0.1", default-features = false }
 pin-project-lite = "0.2"
+cfg-if = "1"
 
 [target.'cfg(target_os ="linux")'.dependencies]
 libc = "0.2.170"
