--- a/flag-bearer/Cargo.toml
+++ b/flag-bearer/Cargo.toml
@@ -7,22 +7,9 @@ description = "Generic async semaphores"
 repository = "https://github.com/conradludgate/flag-bearer"
 
 [dependencies]
-pin-list = { version = "0.1", default-features = false }
-pin-project-lite = "0.2"
-cfg-if = "1"
-lock_api = "0.4"
-
-[target.'cfg(target_os ="linux")'.dependencies]
-libc = "0.2.170"
-
-[target.'cfg(not(target_os = "linux"))'.dependencies]
-parking_lot = { version = "0.12", default-features = false }
+flag-bearer-core = { version = "0.1.0-rc.6", path = "../flag-bearer-core" }
+flag-bearer-queue = { version = "0.1.0-rc.6", path = "../flag-bearer-queue" }
+flag-bearer-mutex = { version = "0.1.0-rc.6", path = "../flag-bearer-mutex" }
 
 [dev-dependencies]
 pollster = "0.4"
-
-[target.'cfg(loom)'.dev-dependencies]
-loom = { version = "0.7.2", features = ["futures"] }
-
-[lints.rust]
-unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }
