--- a/flag-bearer-queue/Cargo.toml
+++ b/flag-bearer-queue/Cargo.toml
@@ -15,7 +15,7 @@ lock_api = "0.4"
 
 [dev-dependencies]
 pollster = "0.4"
-flag-bearer = { version = "0.1.0-rc.7", path = "../flag-bearer" }
+flag-bearer = { path = "../flag-bearer" }
 
 [target.'cfg(loom)'.dev-dependencies]
 loom = { version = "0.7.2", features = ["futures"] }
