--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "flag-bearer-mutex",
     "flag-bearer-queue",
     "flag-bearer-tests",
+    "tokio-postgres-pool",
 ]
 resolver = "2"
